--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,8 @@
 include ':app'
 
+include ':sdk'
+project(':sdk').projectDir = new File(rootProject.projectDir, './guardian/sdk')
+
 include ':api'
 project(':api').projectDir = new File(rootProject.projectDir, './guardian/api')
 
