--- a/guardian/sdk/build.gradle
+++ b/guardian/sdk/build.gradle
@@ -20,6 +20,25 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //Gson
+    compile 'com.google.code.gson:gson:2.6.2'
+
+    //OkHttp
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
+
+    //Mockito
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
+    //Hamcrest matchers
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+
+    //OkHttp MockWebServer
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.3.1'
+
+    //Awaitility
+    testCompile 'com.jayway.awaitility:awaitility:1.7.0'
+
     testCompile 'junit:junit:4.12'
 }
 
