--- a/guardian/sdk/build.gradle
+++ b/guardian/sdk/build.gradle
@@ -21,6 +21,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    // Annotations (@NonNull etc)
+    compile 'com.android.support:support-annotations:23.4.0'
+
     //Gson
     compile 'com.google.code.gson:gson:2.6.2'
 
