--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,18 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    compile project(path: ':sdk')
+
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+
+    //GCM
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
+
+    //EventBus
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+    //ZXing QR decoder deps
+    compile 'com.google.zxing:core:3.2.1'
 }
