--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'jacoco-android'
 apply from: '../scripts/version.gradle'
+apply from: '../scripts/jacoco.gradle'
 
 android {
     compileSdkVersion 25
