--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'jacoco-android'
+apply from: '../scripts/version.gradle'
 
 android {
     compileSdkVersion 25
@@ -9,7 +10,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "0.1.0"
+        versionName project.version
     }
     buildTypes {
         release {
@@ -52,4 +53,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-apply from: '../version.gradle'
+apply from: '../scripts/maven.gradle'
+apply from: '../scripts/bintray.gradle'
