--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -4,7 +4,7 @@ apply from: '../scripts/jacoco.gradle'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         minSdkVersion 15
@@ -24,13 +24,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Annotations (@NonNull etc)
-    compile 'com.android.support:support-annotations:25.0.1'
+    compile 'com.android.support:support-annotations:25.3.1'
 
     //Gson
     compile 'com.google.code.gson:gson:2.8.0'
 
     //OkHttp
-    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
 
     //Mockito
     testCompile 'org.mockito:mockito-core:1.10.19'
@@ -39,7 +40,7 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-library:1.3'
 
     //OkHttp MockWebServer
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.4.1'
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
 
     //Awaitility
     testCompile 'com.jayway.awaitility:awaitility:1.7.0'
