--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ buildscript {
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         classpath 'gradle.plugin.com.auth0.gradle:oss-library:0.6.0'
     }
 }
@@ -19,6 +20,7 @@ allprojects {
 
     repositories {
         jcenter()
+        google()
     }
 }
 
