--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -21,12 +21,12 @@ oss {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 1
         versionName project.version
     }
@@ -39,35 +39,35 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Annotations (@NonNull etc)
-    compile 'com.android.support:support-annotations:25.3.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
 
     //Gson
-    compile 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     //OkHttp
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     //Mockito
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:2.21.0'
 
     //Hamcrest matchers
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
 
     //OkHttp MockWebServer
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
 
     //Awaitility
-    testCompile 'com.jayway.awaitility:awaitility:1.7.0'
+    testImplementation 'com.jayway.awaitility:awaitility:1.7.0'
 
     //Robolectric
-    testCompile 'org.robolectric:robolectric:3.1.2'
+    testImplementation 'org.robolectric:robolectric:3.6.1'
 
     // JWT verification
-    testCompile 'com.auth0:java-jwt:2.2.1'
+    testImplementation 'com.auth0:java-jwt:2.2.1'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
