--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,12 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
-        maven {
-            url 'https://plugins.gradle.org/m2/'
-        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
-        classpath 'gradle.plugin.com.auth0.gradle:oss-library:0.6.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
@@ -18,6 +15,7 @@ allprojects {
     group = 'com.auth0.android'
 
     repositories {
+        google()
         jcenter()
     }
 }
