--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'com.auth0.gradle.oss-library.android'
+plugins {
+    id "com.auth0.gradle.oss-library.android" version "0.8.0"
+}
 
 logger.lifecycle("Using version ${version} for ${name}")
 
@@ -21,12 +23,11 @@ oss {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 1
         versionName project.version
     }
@@ -36,38 +37,32 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Annotations (@NonNull etc)
-    compile 'com.android.support:support-annotations:25.3.1'
-
+    implementation 'com.android.support:support-annotations:28.0.0'
     //Gson
-    compile 'com.google.code.gson:gson:2.8.0'
-
+    implementation 'com.google.code.gson:gson:2.8.5'
     //OkHttp
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-
+    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
     //Mockito
-    testCompile 'org.mockito:mockito-core:1.10.19'
-
+    testImplementation 'org.mockito:mockito-core:2.8.9'
     //Hamcrest matchers
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
-
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
     //OkHttp MockWebServer
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
-
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.0'
     //Awaitility
-    testCompile 'com.jayway.awaitility:awaitility:1.7.0'
-
+    testImplementation 'com.jayway.awaitility:awaitility:1.7.0'
     //Robolectric
-    testCompile 'org.robolectric:robolectric:3.1.2'
-
+    testImplementation 'org.robolectric:robolectric:3.1.2'
     // JWT verification
-    testCompile 'com.auth0:java-jwt:2.2.1'
-
-    testCompile 'junit:junit:4.12'
+    testImplementation 'com.auth0:java-jwt:2.3.0'
+    testImplementation 'junit:junit:4.12'
 }
