--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -29,8 +30,9 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     //GSON
     implementation 'com.google.code.gson:gson:2.8.5'
-    //GCM
-    implementation 'com.google.android.gms:play-services-gcm:16.1.0'
+    //FCM
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-messaging:17.5.0'
     //EventBus
     implementation 'org.greenrobot:eventbus:3.0.0'
     //ZXing QR decoder deps
