--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,16 @@ jobs:
     - checkout
     - restore_cache:
         keys:
-        - dep-{{ checksum "./app/build.gradle" }}
+        - dep-{{ checksum "./guardian/build.gradle" }}-{{ checksum "./app/build.gradle" }}
         - dep-
     - run: ./gradlew clean build
     - save_cache:
-        key: dep-{{ checksum "./app/build.gradle" }}
+        key: dep-{{ checksum "./guardian/build.gradle" }}-{{ checksum "./app/build.gradle" }}
         paths:
         - ~/.gradle
         - ~/.android
         - /usr/local/android-sdk-linux/extras
-    - run: ./gradlew test jacocoTestReport --continue --console=plain
+    - run: ./gradlew clean test jacocoTestReport --continue --console=plain
     - run:
           name: Upload Coverage
           when: on_success
