fix CI script, target API 30

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,22 @@
 version: 2
 jobs:
   build:
-    environment:
-      GRADLE_OPTS: -Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"
-      _JAVA_OPTIONS: -Xms512m -Xmx1024m
     docker:
-      - image: circleci/android:api-28
+      - image: circleci/android:api-30
 
     steps:
     - checkout
     - restore_cache:
         keys:
-        - dep-{{ checksum "./app/build.gradle" }}
+        - dep-{{ checksum "./guardian/build.gradle" }}-{{ checksum "./app/build.gradle" }}
         - dep-
-    - run: ./gradlew clean build
+    - run: ./gradlew clean test jacocoTestReport --continue --console=plain --max-workers 4
     - save_cache:
-        key: dep-{{ checksum "./app/build.gradle" }}
+        key: dep-{{ checksum "./guardian/build.gradle" }}-{{ checksum "./app/build.gradle" }}
         paths:
         - ~/.gradle
         - ~/.android
         - /usr/local/android-sdk-linux/extras
-    - run: ./gradlew test jacocoTestReport --continue --console=plain
     - run:
           name: Upload Coverage
           when: on_success
