--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -23,11 +23,11 @@ oss {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName project.version
         buildConfigField "String", "VERSION_NAME", "\"${project.version}\""
@@ -41,6 +41,13 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    testOptions {
+        unitTests {
+            all {
+                maxHeapSize = "1024m"
+            }
+        }
     }
 }
 
