--- a/.circleci/config.old.yml
+++ b/.circleci/config.old.yml
@@ -1,17 +1,9 @@
-version: 2.1
-orbs:
-  ship: auth0/ship@0.1.0
-  codecov: codecov/codecov@3
-parameters:
-  docker_image:
-    type: string
-    default: circleci/android:api-30
-
 version: 2
 jobs:
   build:
     docker:
-      - image: << pipeline.parameters.docker_image >>
+      - image: circleci/android:api-30
+
     steps:
     - checkout
     - restore_cache:
@@ -25,4 +17,7 @@ jobs:
         - ~/.gradle
         - ~/.android
         - /usr/local/android-sdk-linux/extras
-    - codecov/upload
+    - run:
+          name: Upload Coverage
+          when: on_success
+          command: bash <(curl -s https://codecov.io/bash) -Z -C $CIRCLE_SHA1
