--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
 orbs:
-  ship: auth0/ship@0.1.0
+  ship: auth0/ship@0.6.0
   codecov: codecov/codecov@3
 parameters:
   docker_image:
     type: string
-    default: circleci/android:api-30
+    default: cimg/android:2022.08
 
 jobs:
   build:
