--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 parameters:
   docker_image:
     type: string
-    default: cimg/android:2022.08
+    default: circleci/android:api-30
 
 jobs:
   build:
