fix(okhttp-bom): use platform keyword to implement okhttp-bom

--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.9.1'
     // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp-bom:4.10.0'
+    implementation platform('com.squareup.okhttp3:okhttp-bom:4.10.0')
     implementation 'com.squareup.okhttp3:okhttp'
     implementation 'com.squareup.okhttp3:logging-interceptor'
     testImplementation 'com.squareup.okhttp3:mockwebserver'
