feat: rich consents api client (WIP)

--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -1,35 +1,13 @@
 plugins {
-    id "com.auth0.gradle.oss-library.android" version "0.17.1"
-}
-
-logger.lifecycle("Using version ${version} for ${name}")
-
-oss {
-    name 'Guardian.Android'
-    repository 'Guardian.Android'
-    organization 'auth0'
-    description 'Android toolkit for Auth0 Guardian API'
-
-    developers {
-        auth0 {
-            displayName = 'Auth0'
-            email = 'oss@auth0.com'
-        }
-        nikolaseu {
-            displayName = 'Nicolas Ulrich'
-            email = 'nicolas.ulrich@auth0.com'
-        }
-    }
+    id 'com.android.library'
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 30
 
     defaultConfig {
-        minSdkVersion 22
-        targetSdkVersion 33
-        versionCode 1
-        versionName project.version
+        minSdkVersion 15
+        targetSdkVersion 30
         buildConfigField "String", "VERSION_NAME", "\"${project.version}\""
     }
     buildTypes {
@@ -47,19 +25,19 @@ android {
             all {
                 maxHeapSize = "1024m"
             }
-            includeAndroidResources = true
         }
     }
+    namespace 'com.auth0.android.guardian.sdk'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Annotations (@NonNull etc)
-    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation 'androidx.annotation:annotation:1.9.1'
     // Gson
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
     // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp-bom:4.10.0'
+    implementation platform('com.squareup.okhttp3:okhttp-bom:4.10.0')
     implementation 'com.squareup.okhttp3:okhttp'
     implementation 'com.squareup.okhttp3:logging-interceptor'
     testImplementation 'com.squareup.okhttp3:mockwebserver'
@@ -73,4 +51,5 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.4'
     // JWT verification
     testImplementation 'com.auth0:java-jwt:4.0.0'
+    testImplementation 'junit:junit:4.13.2'
 }
