--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 android {
     defaultConfig {
+        compileSdk 34
         minSdkVersion 26
         targetSdkVersion 34
         buildConfigField "String", "VERSION_NAME", "\"${project.version}\""
