feat: rich consents (#122)
* feat: rich consents api client (WIP)

* feat: rich consents API client

* feat: provide rich consents client in api client

* feat: bootstrap rich consents api client

* feat: get public key from signing key

* feat(app): notificaiton with consent details

Implement an example of fetching rich consent record when transaction
linking id is present in the notificaiton.

* fix(guardian): upgrade java-jwt

* refactor(app): fetch consent in main activity

Fetch consent details in main activity and pass it as intent extra. If
the rich consent record is not found render the standrad notification
activity.

* doc: fetch consent

* fix(guardian): strip guardian subdomain

* doc: add methods docs

* fix: typos

* chore: change min and target sdk versions

* chore: add compile sdk version

* Add public key to enrollment and move key decoding out of sdk to app code

* Improve documentation about key generation

* Small doc fix

* Small doc fix

* Fix version references

* removed base url manipulation

fixed tests

rollback build version

Revert "rollback build version"

This reverts commit ee67e36a9f3e5f50db2b7bce87e79037c43ad121.

Revert "fixed tests"

This reverts commit d06fee555a64aec5274c192b5f255e5c3f7d23cf.

Revert "removed base url manipulation"

This reverts commit ec4d416919fa503da2d89b28389eaa044a43f973.

removed base url manipulation

fixed tests

rollback build version

changed dependency between Guardian, GuardianAPIClient, RichConsentsAPIClient. Updated tests

removed personal data

updated README.md

fixed shouldCreateValidRichConsentsAPI test

fixed verifyBasicJWT, verifyAccessApprovalJWT tests

updated documentation, resources,

created tests for appendingPathComponentIfNeeded

fixed tests

* fix: upgrade bouncy castle to 1.78

* chore: upgrade java-jwt version to 4.5

---------

Co-authored-by: Sam Muncke <sam.muncke@okta.com>
Co-authored-

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.auth0.guardian.sample'
 }
 
 dependencies {
@@ -39,4 +40,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.3.1'
     // ZXing QR decoder deps
     implementation 'com.google.zxing:core:3.5.0'
+
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.78'
 }
