--- a/guardian/build.gradle
+++ b/guardian/build.gradle
@@ -1,35 +1,12 @@
 plugins {
-    id "com.auth0.gradle.oss-library.android" version "0.17.1"
-}
-
-logger.lifecycle("Using version ${version} for ${name}")
-
-oss {
-    name 'Guardian.Android'
-    repository 'Guardian.Android'
-    organization 'auth0'
-    description 'Android toolkit for Auth0 Guardian API'
-
-    developers {
-        auth0 {
-            displayName = 'Auth0'
-            email = 'oss@auth0.com'
-        }
-        nikolaseu {
-            displayName = 'Nicolas Ulrich'
-            email = 'nicolas.ulrich@auth0.com'
-        }
-    }
+    id 'com.android.library'
 }
 
 android {
-    compileSdkVersion 33
-
     defaultConfig {
+        compileSdk 33
         minSdkVersion 22
         targetSdkVersion 33
-        versionCode 1
-        versionName project.version
         buildConfigField "String", "VERSION_NAME", "\"${project.version}\""
     }
     buildTypes {
@@ -47,21 +24,24 @@ android {
             all {
                 maxHeapSize = "1024m"
             }
-            includeAndroidResources = true
         }
     }
+    namespace 'com.auth0.android.guardian.sdk'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Annotations (@NonNull etc)
-    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation 'androidx.annotation:annotation:1.9.1'
     // Gson
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
     // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp-bom:4.10.0'
+    implementation platform('com.squareup.okhttp3:okhttp-bom:4.10.0')
     implementation 'com.squareup.okhttp3:okhttp'
     implementation 'com.squareup.okhttp3:logging-interceptor'
+    // JWT signing/verification
+    implementation 'com.auth0:java-jwt:4.5.0'
+
     testImplementation 'com.squareup.okhttp3:mockwebserver'
     // Mockito
     testImplementation 'org.mockito:mockito-core:4.6.1'
@@ -70,7 +50,6 @@ dependencies {
     // Awaitility
     testImplementation 'org.awaitility:awaitility:4.2.0'
     // Robolectric
-    testImplementation 'org.robolectric:robolectric:4.4'
-    // JWT verification
-    testImplementation 'com.auth0:java-jwt:4.0.0'
+    testImplementation 'org.robolectric:robolectric:4.14'
+    testImplementation 'junit:junit:4.13.2'
 }
