build: new GH actions workflow

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,26 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+GROUP=com.auth0.android
+POM_ARTIFACT_ID=guardian
+
+POM_NAME=Guardian.Android
+POM_DESCRIPTION=Auth0 Guardian SDK
+POM_PACKAGING=aar
+
+POM_URL=https://github.com/auth0/Guardian.Android
+POM_SCM_URL=https://github.com/auth0/Guardian.Android
+POM_SCM_CONNECTION=scm:git@github.com:auth0/Guardian.Android.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:auth0/Guardian.Android.git
+
+POM_LICENCE_NAME=The MIT License (MIT)
+POM_LICENCE_URL=https://raw.githubusercontent.com/auth0/Guardian.Android/master/LICENSE
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=auth0
+POM_DEVELOPER_NAME=Auth0
+POM_DEVELOPER_EMAIL=oss@auth0.com
+
 android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=true
 android.nonFinalResIds=false
