Create steps for manual release

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,31 @@ android.enableJetifier=true
 android.nonFinalResIds=false
 android.nonTransitiveRClass=false
 android.useAndroidX=true
+
+
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx12800M
+org.gradle.configureondemand=true
+
+
+android.useAndroidX=true
+GROUP=com.auth0.android
+POM_ARTIFACT_ID=guardian
+
+POM_NAME=Guardian.Android
+POM_DESCRIPTION=Auth0 Guardian SDK
+POM_PACKAGING=aar
+
+POM_URL=https://github.com/auth0/Guardian.Android
+POM_SCM_URL=https://github.com/auth0/Guardian.Android
+POM_SCM_CONNECTION=scm:git@github.com:auth0/Guardian.Android.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:auth0/Guardian.Android.git
+
+POM_LICENCE_NAME=The MIT License (MIT)
+POM_LICENCE_URL=https://raw.githubusercontent.com/auth0/Guardian.Android/master/LICENSE
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=auth0
+POM_DEVELOPER_NAME=Auth0
+POM_DEVELOPER_EMAIL=oss@auth0.com
